--- a/drupal/sites/all/themes/opf/opf.css
+++ b/drupal/sites/all/themes/opf/opf.css
@@ -71,6 +71,7 @@ div.container { margin: 0 auto; }
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
 	border:1px solid #9BD5E8;
+  behavior:url('border-radius.htc');
 }
 #subnav a {
 	color: #146B8A;
@@ -85,6 +86,7 @@ div.container { margin: 0 auto; }
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
 	border-radius: 15px;
+  behavior:url('border-radius.htc');
 	background-color:#9dd6e9;
 	color: #146B8A;
 	border: 1px solid #177ba0;
@@ -192,6 +194,7 @@ div.container { margin: 0 auto; }
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
+  behavior:url('border-radius.htc');
 	padding:7px;
 //	margin-right: 10px;
 }
@@ -204,6 +207,7 @@ div.container { margin: 0 auto; }
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
+  behavior:url('border-radius.htc');
 	padding:7px;
 //	margin-left: 10px;
 }
@@ -276,6 +280,7 @@ ul li, ul.menu li, .item-list ul li, li.leaf {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  behavior:url('border-radius.htc');
   background-color: #e6f4f9;
   border: none !important;
 }
