--- a/drupal/sites/all/themes/touch/style.css
+++ b/drupal/sites/all/themes/touch/style.css
@@ -165,7 +165,7 @@ h4, h5, h6, .h4, .h5, .h6 {
 p {
   font-size: 1em;
   line-height: 1.5385;
-  margin: 0 0 1.4em 0;
+  margin: 0 0 1.2em 0;
 }
 
 p a:link {
@@ -514,7 +514,7 @@ margin-bottom: 40px;
 margin-right: 20px;
 float: left;
 width: 300px;
-height: 300px;
+height: 320px;
 overflow: hidden;
 }
 
@@ -919,16 +919,16 @@ color: #000;
 }
 /* Blocks
 ------------------------------------------------*/
-.block {
+.sidebar .block {
   margin-bottom: 1.5385em;
 }
-.block  p{
+.sidebar .block  p{
   margin-bottom: 2px;
 }
-.block h2 {
+.sidebar .block h2 {
   margin-top: 0;
 }
-.block a {
+.sidebar .block a {
  color: #146B8A;
 }
 /* Footer
@@ -938,6 +938,7 @@ clear: both;
 width: 980px;
 color: #444444;
 text-shadow: 1px 1px #fff;
+padding-bottom: 1em;
 }
 #footer a{
 color: #676767;
@@ -963,6 +964,14 @@ list-style-image: none;
 background: url(images/sidebar-arrow.png) no-repeat left center;
 border-bottom: 1px dotted #464646;
 padding: 4px 0 4px 17px;
+}
+footer {
+padding-bottom: 0.5em;
+}
+footer ul.inline li {
+background: url(images/sidebar-arrow.png) no-repeat left center;
+padding: 4px 0 4px 17px;
+line-height: 2.5em;
 }
 #footer .block {
 margin: 4px 0px;
