--- a/drupal/sites/all/themes/touch_opf/style.css
+++ b/drupal/sites/all/themes/touch_opf/style.css
@@ -671,7 +671,7 @@ display: block;
 margin-bottom: 2px;
 }
 #main .content {
-color: #7e7e7e;
+color: #505050;
 }
 #main .content p{
 line-height: 20px;
